--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "suhu",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.1"
